[project]
name = "path-summarize-alerts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio~=4.6.2.post1",
    "boto3~=1.35.54",
    "certifi~=2024.8.30",
    "distro~=1.9.0",
    "h11~=0.14.0",
    "httpcore~=1.0.6",
    "httpx~=0.27.2",
    "idna~=3.10",
    "jiter~=0.5.0",
    "openai~=1.53.0",
    "pydantic-core~=2.23.4",
    "pydantic~=2.9.2",
    "sniffio~=1.3.1",
    "typing-extensions~=4.12.2",
    "annotated-types~=0.7.0",
    "pip~=24.3.1",
    "attrs~=24.2.0",
    "jinja2~=3.1.4",
    "instructor~=1.6.3",
    "jmespath~=1.0.1",
    "rich~=13.9.4",
    "botocore~=1.35.54",
    "s3transfer~=0.10.3",
    "click~=8.1.7",
    "pygments~=2.18.0",
    "urllib3~=2.2.3",
    "python-dateutil~=2.9.0.post0",
    "six~=1.16.0",
    "requests~=2.32.3",
    "markdown-it-py~=3.0.0",
    "multidict~=6.1.0",
    "propcache~=0.2.0",
    "mdurl~=0.1.2",
    "typer~=0.12.5",
    "shellingham~=1.5.4",
    "markupsafe~=3.0.2",
    "yarl~=1.17.1",
    "aiohttp~=3.10.10",
    "aiosignal~=1.3.1",
    "frozenlist~=1.5.0",
    "aiohappyeyeballs~=2.4.3",
    "charset-normalizer~=3.4.0",
    "tenacity~=9.0.0",
    "docstring-parser~=0.16",
    "aws-lambda-powertools~=3.2.0",
    "ruff>=0.8.0",
    "langsmith>=0.2.10",
    "aws-xray-sdk>=2.14.0",
]
